Prevent words running together due to white-space collapse

--- a/views/public/css/styles.css
+++ b/views/public/css/styles.css
@@ -5,7 +5,6 @@
 }
 
 .tei-entity-ref {
-    margin-left: 3px; /** FIXME: Hack for elements running together */
     border-bottom: 1px dotted lightgrey;
 }
 
